# Kumpulan-Kovat

./: .coveragerc  .gitignore  .pylintrc  Procfile  README.md  app.py  codecov.yml  db.py  fly.toml  lint.sh  pyproject.toml  requirements.txt  routes.py  run_robot_tests.sh  schema.sql  tasks.py
.github/workflows/: main.yml
bibtex_generator/: AppLibrary.py  app.py  db.py  references.bib  routes.py
bibtex_generator/entities/: __init__.py  bibtex_formatter.py  citation.py
bibtex_generator/repositories/: __init__.py  citation_repository.py
bibtex_generator/services/: __init__.py  bibtex_service.py  citation_service.py
bibtex_generator/static/: style.css
bibtex_generator/templates/: citation.html  citations.html  doi.html  edit.html  index.html  layout.html  new_article.html  new_book.html  new_citation.html  new_inproceedings.html  new_misc.html  new_phdthesis.html  upload.html
bibtex_generator/tests/: bibtex_formatter_test.py  bibtex_service_test.py  citation_repository_test.py  citation_service_test.py  doi_citation.robot  edit_citation.robot  new_citation.robot  resource.robot
documents/: RETRO.md
src/: routes.py
src/entities/: citation.py
src/repositories/: citation_repository.py
src/services/: app.py  citation_service.py
src/templates/: citations.html  index.html  layout.html  new_citation.html
templates/: citations.html  index.html
