[tool.poetry]
name = "bibtex-generator"
version = "0.1.0"
description = ""
authors = ["akskokki <akseli.kokki@gmail.com>"]
readme = "README.md"
packages = [{include = "bibtex_generator"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
robot = "^20071211"
psycopg = "^3.1.4"
flask-sqlalchemy = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
