[tool.poetry]
name = "bibtex-generator"
version = "0.1.0"
description = ""
authors = ["akskokki <akseli.kokki@gmail.com>"]
readme = "README.md"
packages = [{include = "bibtex_generator"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
robot = "^20071211"
psycopg = "^3.1.4"
flask-sqlalchemy = "^3.0.2"
pylint = "^2.15.7"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
invoke = "^1.7.3"
pytest = "^7.2.0"
requests = "^2.28.1"
robotframework = "^6.0.1"
robotframework-seleniumlibrary = "^6.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
